# odb

./: Cargo.toml  NOTICE  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: release-opendb.yml  release-openroad.yml
src/: eco.rs  generated_api.rs  generated_registry.rs  generated_write_api.rs  lib.rs  report.rs
tests/: eco.rs  generated.rs  generated_write.rs  registry.rs  report.rs
