[package]
name = "vyges-odb"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Safe, ergonomic Rust API for OpenROAD's OpenDB (libodb) — read + ECO write path."
repository = "https://github.com/vyges-tools/odb"

[dependencies]
vyges-odb-sys = { path = "../vyges-tools-odb-sys" }
cxx = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "insert-eco-buffers"
path = "src/bin/insert-eco-buffers.rs"
