[package]
name = "vyges-odb"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Safe, ergonomic Rust API for OpenROAD's OpenDB (libodb) — read + ECO write path."
repository = "https://github.com/vyges-tools/odb"

[dependencies]
# git so external consumers (e.g. vyges-cli) can pull this crate directly; the [patch]
# below redirects to the sibling checkout for local development.
vyges-odb-sys = { git = "https://github.com/vyges-tools/odb-sys.git" }
cxx = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The one binary shipped by `vyges install openroad`. Subcommands (info, insert-eco-buffers)
# live inside it; Loom steps invoke `vyges-openroad insert-eco-buffers ...`.
[[bin]]
name = "vyges-openroad"
path = "src/bin/vyges-openroad.rs"

# Local dev: build against the sibling checkout instead of the git version. Ignored by
# downstream consumers (patches are only honored from the root/workspace manifest).
[patch."https://github.com/vyges-tools/odb-sys.git"]
vyges-odb-sys = { path = "../vyges-tools-odb-sys" }
